--- a/workflows/damas.yml
+++ b/workflows/damas.yml
@@ -9,9 +9,10 @@ jobs:
     runs-on: ubuntu-latest
     if: startsWith(github.event.issue.title, 'damas-')
     steps:
-      run: |
-            curl -X PATCH \
-              -H "Authorization: Bearer $GITHUB_TOKEN" \
-              -H "Accept: application/vnd.github.v3+json" \
-              https://api.github.com/repos/${{ github.repository }}/issues/${{ github.event.issue.number }} \
-              -d '{"body": "Descrição automatizada adicionada à issue."}'
+      - name: Update issue body
+        run: |
+          curl -X PATCH \
+            -H "Authorization: Bearer $GITHUB_TOKEN" \
+            -H "Accept: application/vnd.github.v3+json" \
+            https://api.github.com/repos/${{ github.repository }}/issues/${{ github.event.issue.number }} \
+            -d '{"body": "Descrição automatizada adicionada à issue."}'
