--- a/workflows/damas.yml
+++ b/workflows/damas.yml
@@ -9,10 +9,8 @@ jobs:
     runs-on: ubuntu-latest
     if: startsWith(github.event.issue.title, 'damas-')
     steps:
-      - name: Update issue body
+      - if: startsWith(github.event.issue.title, 'damas-') && contains(github.event.issue.labels.*.name, 'test')
         run: |
-          curl -X PATCH \
-            -H "Authorization: Bearer $GITHUB_TOKEN" \
-            -H "Accept: application/vnd.github.v3+json" \
-            https://api.github.com/repos/${{ github.repository }}/issues/${{ github.event.issue.number }} \
-            -d '{"body": "Descrição automatizada adicionada à issue."}'
+          # the triggering issue contains test
+          echo "${{ github.event_name }}"
+          exit 1
