--- a/.github/workflows/damas.yml
+++ b/.github/workflows/damas.yml
@@ -10,6 +10,8 @@ jobs:
     if: startsWith(github.event.issue.title, 'damas-') 
     steps:
       - uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
       - if: startsWith(github.event.issue.title, 'damas-') && contains(github.event.issue.labels.*.name, 'test')
         run: |
           # the triggering issue contains test
@@ -44,6 +46,8 @@ jobs:
           REPO = os.getenv("REPOSITORY")
           USER = os.getenv("USER")
 
+          os.makedirs("assets", exist_ok=True)
+
           board = Board(variant="brazilian")
 
           try:
@@ -54,32 +58,35 @@ jobs:
               move = Move(board, steps_move=[13, 22]) 
               board.push(move)
 
-              content = svg.create_svg(board)
-              with open("board.svg", "w") as file:
-                  file.write(content)
+              svg_content = svg.create_svg(board)
+              
+              with open("assets/board.svg", "w") as file:
+                  file.write(svg_content)
+
+              with open("README.md", "a") as f:
+                  f.write(f"## {USER} \n")
+                  f.write(f"![board](board.svg) \n")              
+                  
           except ValueError as e:
               print(f"Invalid move: {e}")
               exit(1)
+              
           except Exception as e:
               print(f"Error generating board.svg: {e}")
               exit(1)
 
-          with open("README.md", "a") as f:
-              f.write(f"## {USER} \n")
-              f.write(f"![board](board.svg) \n")
-          EOF
 
-      - name: Upload board.svg
-        uses: actions/upload-artifact@v4
-        with:
-          name: board
-          path: board.svg
+          EOF
 
       - name: Commit files
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}  # Token automático do GitHub
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
           git config --global user.name "github-actions[bot]"
+          git config --global user.email "github-actions[bot]@users.noreply.github.com"
+          git add assets/board.svg README.md
+          git diff --quiet && git diff --staged --quiet || git commit -m "Update board.svg and README"
+          git push origin HEAD
           git config --global user.email "github-actions[bot]@users.noreply.github.com"
           git add assets/board.svg README.md
           git commit -m "Update board.svg and README"
