--- a/.github/workflows/damas.yml
+++ b/.github/workflows/damas.yml
@@ -63,7 +63,7 @@ jobs:
               with open("assets/board.svg", "w") as file:
                   file.write(svg_content)
 
-              with open("README.md", "a") as f:
+              with open("README.md", "w") as f:
                   f.write(f"## {USER} \n")
                   f.write(f"![board](assets/board.svg) \n")              
                   
