--- a/.github/workflows/damas.yml
+++ b/.github/workflows/damas.yml
@@ -12,9 +12,9 @@ jobs:
       - uses: actions/checkout@v4
         with:
           fetch-depth: 0
+
       - if: startsWith(github.event.issue.title, 'damas-') && contains(github.event.issue.labels.*.name, 'test')
         run: |
-          # the triggering issue contains test
           echo "${{ github.event_name }}"
           exit 1
 
@@ -22,10 +22,10 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
-          echo "${{ github.event_name }}"
           echo "REPOSITORY=${{ github.repository }}" >> $GITHUB_ENV
           echo "ISSUE_NUMBER=${{ github.event.issue.number }}" >> $GITHUB_ENV
           echo "USER=${{ github.event.issue.user.login }}" >> $GITHUB_ENV
+          echo "GITHUB_EVENT_ISSUE_TITLE=${{ github.event.issue.title }}" >> $GITHUB_ENV
 
       - uses: actions/setup-python@v4
         with:
@@ -36,8 +36,14 @@ jobs:
           pip install PyGithub pydraughts
 
       - name: Play
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          REPOSITORY: ${{ env.REPOSITORY }}
+          ISSUE_NUMBER: ${{ env.ISSUE_NUMBER }}
+          USER: ${{ env.USER }}
+          GITHUB_EVENT_ISSUE_TITLE: ${{ env.GITHUB_EVENT_ISSUE_TITLE }}
         run: |
-          python << EOF
+          python << 'EOF'
           from github import Github
           from draughts import Board, Move, svg, WHITE, BLACK
           from draughts.PDN import PDNReader, PDNWriter
@@ -45,17 +51,14 @@ jobs:
           import base64
 
           try:
-              # Create the assets directory
               TOKEN = os.environ["GITHUB_TOKEN"]
               REPO = os.environ["REPOSITORY"]
               USER = os.environ["USER"]
               ISSUE_NUMBER = os.environ["ISSUE_NUMBER"]
+              DAMAS_GAME_TITLE = os.environ["GITHUB_EVENT_ISSUE_TITLE"]
 
-              # Split the title of the issue to extract game information
-              title_split = os.getenv("GITHUB_EVENT_ISSUE_TITLE", "").split('-')
-
+              title_split = DAMAS_GAME_TITLE.split('-')
               DAMAS_GAME_NUM = title_split[3] if len(title_split) > 3 else ISSUE_NUMBER
-              DAMAS_GAME_TITLE = f"{title_split[0]}{DAMAS_GAME_NUM}" if len(title_split) > 0 else DAMAS_GAME_NUM
               DAMAS_GAME_CMD = title_split[1] if len(title_split) > 1 else ""
               DAMAS_USER_MOVE = title_split[2] if len(title_split) > 2 else ""
 
@@ -157,18 +160,6 @@ jobs:
           mkdir -p assets
           git add assets/board.svg README.md
           if [ -n "$(git status --porcelain)" ]; then
-            echo "🚀..."
             git commit -m "Update board.svg and README [skip ci]"
             git push origin main
-            echo "✅"
-          else
-            echo "🔄"
           fi
-          echo "Status:"
-          git status
-          if [ -d "assets" ]; then
-            ls -la assets/
-          else
-            echo "Assets directory does not exist."
-          fi
-          ls -la assets/
