--- a/.github/workflows/damas.yml
+++ b/.github/workflows/damas.yml
@@ -45,28 +45,33 @@ jobs:
         run: |
           python << 'EOF'
           from github import Github
+          from github import Auth 
           from draughts import Board, Move, svg, WHITE, BLACK
           from draughts.PDN import PDNReader, PDNWriter
           import os
           import base64
 
-          try:
-              TOKEN = os.environ["GITHUB_TOKEN"]
-              REPO = os.environ["REPOSITORY"]
-              USER = os.environ["USER"]
-              ISSUE_NUMBER = os.environ["ISSUE_NUMBER"]
-              DAMAS_GAME_TITLE = os.environ["GITHUB_EVENT_ISSUE_TITLE"]
+            TOKEN = os.environ["GITHUB_TOKEN"]
+            REPO = os.environ["REPOSITORY"]
+            USER = os.environ["USER"]
+            ISSUE_NUMBER = os.environ["ISSUE_NUMBER"]
+            DAMAS_GAME_TITLE = os.environ["GITHUB_EVENT_ISSUE_TITLE"]
 
-              title_split = DAMAS_GAME_TITLE.split('-')
-              DAMAS_GAME_NUM = title_split[3] if len(title_split) > 3 else ISSUE_NUMBER
-              DAMAS_GAME_CMD = title_split[1] if len(title_split) > 1 else ""
-              DAMAS_USER_MOVE = title_split[2] if len(title_split) > 2 else ""
+            title_split = DAMAS_GAME_TITLE.split('-')
+            if len(title_split) < 2:
+                raise ValueError("Issue title must contain at least two parts separated by '-'")
 
-              GAME_DATA_PATH = "damas_game/damas.pdn"
-              TMP_FILE = "/tmp/damas.pdn"
+            DAMAS_GAME_NUM = title_split[3] if len(title_split) > 3 else ISSUE_NUMBER
+            DAMAS_GAME_CMD = title_split[1] if len(title_split) > 1 else ""
+            DAMAS_USER_MOVE = title_split[2] if len(title_split) > 2 else ""
 
-              g = Github(TOKEN)
-              repo = g.get_repo(REPO)
+            GAME_DATA_PATH = "damas_game/damas.pdn"
+            TMP_FILE = "/tmp/damas.pdn"
+
+            g = Github(auth=Auth.Token(TOKEN))
+            repo = g.get_repo(REPO)
+
+              game = None
 
               try:
                   file_content = repo.get_contents(GAME_DATA_PATH)
@@ -83,7 +88,7 @@ jobs:
                   except Exception as e:
                       print(f"Error creating a new game: {e}")
 
-              if DAMAS_GAME_CMD == "move":
+              elif DAMAS_GAME_CMD == "move":
                   try:
                       with open(TMP_FILE, "w") as f:
                           f.write(game_content)
@@ -111,39 +116,39 @@ jobs:
                   print(f"Error verifying game status: {e}")
 
               # Update README
-              try:
-                  with open(GAME_DATA_PATH, "w") as file:
-                      file.write("")
-                  game = PDNWriter(filename=GAME_DATA_PATH, board=game)
+              if game is not None:
+                  try:
+                      with open(GAME_DATA_PATH, "w") as file:
+                          file.write("")
+                      game = PDNWriter(filename=GAME_DATA_PATH, board=game)
 
-                  svg_content = svg.create_svg(game)
-                  with open("assets/board.svg", "w") as file:
-                      file.write(svg_content)
+                      svg_content = svg.create_svg(game)
+                      with open("assets/board.svg", "w") as file:
+                          file.write(svg_content)
 
-                  message = "[new game](https://github.com/Igor0Pires/Igor0Pires/issues/new?title=damas-new&body=)"
-                  moves = game.legal_moves()
-                  trad_moves = list(map(lambda x: x.board_move, moves))
+                      message = "[new game](https://github.com/Igor0Pires/Igor0Pires/issues/new?title=damas-new&body=)"
+                      moves = game.legal_moves()
+                      trad_moves = list(map(lambda x: x.board_move, moves))
 
-                  for move in trad_moves:
-                      message += f"\n- [{move}](https://github.com/Igor0Pires/Igor0Pires/issues/new?title=damas-move-{move}&body=)"
+                      for move in trad_moves:
+                          message += f"\n- [{move}](https://github.com/Igor0Pires/Igor0Pires/issues/new?title=damas-move-{move}&body=)"
 
-                  new_readme = f"""
-                  ## Torneio de Damas (BETA) 
-                  Não está funcionando (ainda...)
+                      new_readme = f"""
+                      ## Torneio de Damas (BETA) 
+                      Não está funcionando (ainda...)
 
-                  É a vez das brancas (listradas)
+                      É a vez das brancas (listradas)
 
-                  ![board](assets/board.svg)
+                      ![board](assets/board.svg)
 
-                  {message}
-                  """
+                      {message}
+                      """
 
-                  current_readme = repo.get_contents('README.md')
-                  path_readme = current_readme.path
+                      current_readme = repo.get_contents('README.md')
 
-                  repo.update_file('README.md', 'Update README', new_readme, current_readme.sha, branch='main')
-              except Exception as e:
-                  print(f"Error updating README: {e}")
+                      repo.update_file('README.md', 'Update README', new_readme, current_readme.sha, branch='main')
+                  except Exception as e:
+                      print(f"Error updating README: {e}")
 
           except KeyError as e:
               print(f"Environment variable missing: {e}")
