--- a/.github/workflows/damas.yml
+++ b/.github/workflows/damas.yml
@@ -62,7 +62,7 @@ jobs:
               raise ValueError("Issue title must contain at least two parts separated by '-'")
 
           DAMAS_GAME_NUM = title_split[3] if len(title_split) > 3 else ISSUE_NUMBER
-          DAMAS_GAME_CMD = title_split[1] if len(title_split) > 1 else ""
+          DAMAS_GAME_CMD = title_split[1]
           DAMAS_USER_MOVE = title_split[2] if len(title_split) > 2 else ""
 
           GAME_DATA_PATH = "damas_game/damas.pdn"
