--- a/.github/workflows/damas.yml
+++ b/.github/workflows/damas.yml
@@ -60,7 +60,8 @@ jobs:
           title_split = DAMAS_GAME_TITLE.split('-')
           if len(title_split) < 2:
               raise ValueError("Issue title must contain at least two parts separated by '-'")
-
+          
+          print(len(title_split))
           DAMAS_GAME_NUM = title_split[3] if len(title_split) > 3 else ISSUE_NUMBER
           DAMAS_GAME_CMD = title_split[1]
           DAMAS_USER_MOVE = title_split[2] if len(title_split) > 2 else ""
