--- a/.github/workflows/damas.yml
+++ b/.github/workflows/damas.yml
@@ -61,10 +61,10 @@ jobs:
           if len(title_split) < 2:
               raise ValueError("Issue title must contain at least two parts separated by '-'")
           
-          DAMAS_GAME_NUM = title_split[3] if len(title_split) > 3 else ISSUE_NUMBER
+          # DAMAS_GAME_NUM = title_split[3] if len(title_split) > 3 else ISSUE_NUMBER
           DAMAS_GAME_CMD = title_split[1]
-          DAMAS_USER_MOVE = title_split[2] if len(title_split) > 2 else ""
-          print(DAMAS_GAME_CMD, DAMAS_USER_MOVE, DAMAS_GAME_NUM)
+          # DAMAS_USER_MOVE = title_split[2] if len(title_split) > 2 else ""
+          print(DAMAS_GAME_CMD)
 
           GAME_DATA_PATH = "damas_game/damas.pdn"
           TMP_FILE = "/tmp/damas.pdn"
