--- a/.github/workflows/damas.yml
+++ b/.github/workflows/damas.yml
@@ -163,6 +163,8 @@ jobs:
         run: |
           git config --global user.name "github-actions[bot]"
           git config --global user.email "github-actions[bot]@users.noreply.github.com"
+          git fetch origin main
+          git merge origin/main --no-edit
           mkdir -p assets
           git add assets/board.svg README.md damas_game/damas.pdn  # Added PDN file
           if [ -n "$(git status --porcelain)" ]; then
