--- a/.github/workflows/damas.yml
+++ b/.github/workflows/damas.yml
@@ -137,14 +137,14 @@ jobs:
                   moves = game.legal_moves()
                   trad_moves = list(map(lambda x:  _number_to_algebraic(x.pdn_move, variant="brazilian"), moves))
                   table_legal_moves = f"""| From | To |\n"""
-                  from = {}
+                  from_dict = {}
                   for move in trad_moves:
                       from_pos, to_pos = move.split("-")
-                      if from_pos not in from:
-                          from[from_pos] = []
-                      from[from_pos].append(f"[to_pos](https://github.com/Igor0Pires/Igor0Pires/issues/new?title=damas|move|{move})")
+                      if from_pos not in from_dict:
+                          from_dict[from_pos] = []
+                      from_dict[from_pos].append(f"[to_pos](https://github.com/Igor0Pires/Igor0Pires/issues/new?title=damas|move|{move})")
 
-                      table_legal_moves += f"| {from_pos} | {', '.join(from[from_pos])} |\n"
+                      table_legal_moves += f"| {from_pos} | {', '.join(from_dict[from_pos])} |\n"
                       
 
                   new_readme = f"""## Torneio de Damas (BETA)\nNão está funcionando (ainda...)\nÉ a vez das brancas (listradas)\n![board](assets/board.svg)\n{table_legal_moves if len(trad_moves) > 0 else messages}\n"""
