--- a/.github/workflows/damas.yml
+++ b/.github/workflows/damas.yml
@@ -136,7 +136,7 @@ jobs:
 
                   moves = game.legal_moves()
                   trad_moves = list(map(lambda x:  _number_to_algebraic(x.pdn_move, variant="brazilian"), moves))
-                  table_legal_moves = f"""| From | To |\n"""
+                  table_legal_moves = f"""| From | To |\n| ---- | -- |\n"""
                   from_dict = {}
                   for move in trad_moves:
                       from_pos, to_pos = move.split("-")
