--- a/.github/workflows/damas.yml
+++ b/.github/workflows/damas.yml
@@ -155,7 +155,7 @@ jobs:
                   issues = repo.get_issues(state="open", sort="created", direction="desc")
                   if DAMAS_USER_MOVE == "":
                       raise ValueError("User move is required for 'move' command")
-                  if issues[1].user.login == USER and issues[1].title.split("|")[1] == DAMAS_USER_CMD:
+                  if issues[1].user.login == USER and issues[1].title.split("|")[1] == DAMAS_GAME_CMD:
                       raise ValueError("Chill out, you already played your turn")
 
                   move = Move(game, pdn_move=DAMAS_USER_MOVE)
