--- a/.github/workflows/damas.yml
+++ b/.github/workflows/damas.yml
@@ -210,7 +210,7 @@ jobs:
                   for from_pos, to_pos in from_dict.items():
                       table_legal_moves += f"""| {from_pos} | {', '.join(to_pos)} |\n"""
                   
-                  new_readme = f"""## Damas Tournament (BETA)\nNot working (yet...)\n\nIt's {player}'s turn!\n\n<img src="assets/board.svg" alt="board" width="70%"/>\n\n{table_legal_moves if len(trad_moves) > 0 else messages}\n"""
+                  new_readme = f"""## Damas Tournament (BETA)\n\nIt's {player}'s turn!\n\n<img src="assets/board.svg" alt="board" width="70%"/>\n\n{table_legal_moves if len(trad_moves) > 0 else messages}\n"""
 
                   current_readme = repo.get_contents('README.md')
 
