--- a/.github/workflows/damas.yml
+++ b/.github/workflows/damas.yml
@@ -209,8 +209,8 @@ jobs:
                       from_dict[from_pos].append(f"[{to_pos}](https://github.com/Igor0Pires/Igor0Pires/issues/new?title=damas%7Cmove%7C{move})")
                   for from_pos, to_pos in from_dict.items():
                       table_legal_moves += f"""| {from_pos} | {', '.join(to_pos)} |\n"""
-                  
-                  new_readme = f"""## Damas Tournament (BETA)\n\nIt's {player}'s turn!\n\n<img src="https://raw.githubusercontent.com/Igor0Pires/Igor0Pires/889ccd838b2fe258dd7bdaa297be38ad7ce22e3d/assets/board.svg" alt="board" width="70%"/>\n\n{table_legal_moves if len(trad_moves) > 0 else messages}\n"""
+                  print(REPO)
+                  new_readme = f"""## Damas Tournament (BETA)\n\nIt's {player}'s turn!\n\n<img src="https://raw.githubusercontent.com/Igor0Pires/Igor0Pires/{REPO}/assets/board.svg" alt="board" width="70%"/>\n\n{table_legal_moves if len(trad_moves) > 0 else messages}\n"""
 
                   current_readme = repo.get_contents('README.md')
 
