--- a/.github/workflows/damas.yml
+++ b/.github/workflows/damas.yml
@@ -213,7 +213,7 @@ jobs:
                   
                   timestamp = int(time.time())
                   print(timestamp)
-                  new_readme = f"""## Damas Tournament (BETA)\n\nIt's {player}'s turn!\n\n<img src="https://raw.githubusercontent.com/{REPO}/main/assets/board.svg?{timestamp}" alt="board" width="70%"/>\n\n{table_legal_moves if len(trad_moves) > 0 else messages}\n"""
+                  new_readme = f"""## Damas Tournament (BETA)\n\nIt's {player}'s turn!\n\n<img src="assets/board.svg?{timestamp}" alt="board" width="70%"/>\n\n{table_legal_moves if len(trad_moves) > 0 else messages}\n"""
 
                   current_readme = repo.get_contents('README.md')
 
