--- a/.github/workflows/damas.yml
+++ b/.github/workflows/damas.yml
@@ -204,7 +204,7 @@ jobs:
                   table_legal_moves = f"""| From | To |\n| ---- | -- |\n"""
                   from_dict = {}
                   for move in trad_moves:
-                      from_pos, to_pos = move.split("-")
+                      from_pos, to_pos = move.split("-") if "-" in move else move.split("x")
                       if from_pos not in from_dict:
                           from_dict[from_pos] = []
                       from_dict[from_pos].append(f"[{to_pos}](https://github.com/Igor0Pires/Igor0Pires/issues/new?title=damas%7Cmove%7C{move})")
